# BigData-Project

./: .editorconfig  .env  .gitignore  Everton_Mutti.ipynb  README.md  app.ipynb  const.py  process_data.py  pyproject.toml
project/app/: main.py
project/app/settings/: settings.py
project/linkedin_dashboard/: main.py
project/linkedin_dashboard/Enums/: dataset_enum.py
project/linkedin_dashboard/callbacks/: charts.py
project/linkedin_dashboard/constants/: const.py
project/linkedin_dashboard/data/geojson/: us-states-abr.json
project/linkedin_dashboard/layout/: dashboard_layout.py
project/linkedin_dashboard/process/: process_data.py
project/linkedin_dashboard/settings/: settings.py
