[tool.poetry]
name = "linkedin-data-analysis"
version = "0.1.0"
description = ""
authors = ["EvertonMutti <evertoncastro19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
dash = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
